--- a/packages/rease/package.json
+++ b/packages/rease/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "jeta",
+  "name": "rease",
   "version": "0.0.1",
   "description": "In progress",
   "author": "cftcview <cftcview@gmail.com>",
-  "homepage": "https://github.com/wareset/jeta/tree/main/packages/jeta#readme",
+  "homepage": "https://github.com/wareset/rease/tree/main/packages/rease#readme",
   "license": "MIT",
   "main": "dist/index",
   "module": "dist/index.mjs",
@@ -12,7 +12,7 @@
     "README.md"
   ],
   "keywords": [
-    "jeta"
+    "rease"
   ],
   "scripts": {
     "babel:copy": "babel src --out-dir dist --copy-files --keep-file-extension --no-babelrc",
@@ -31,10 +31,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wareset/jeta.git"
+    "url": "git+https://github.com/wareset/rease.git"
   },
   "bugs": {
-    "url": "https://github.com/wareset/jeta/issues"
+    "url": "https://github.com/wareset/rease/issues"
   },
   "dependencies": {
     "@wareset-utilites/split": "0.2.1",
