--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^3.22.1",
     "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/core": "7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "babel-plugin-module-extension": "^0.1.3"
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "babel-plugin-module-extension": "^0.1.3",
+    "lerna": "^3.22.1"
   }
 }
