--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "rease",
+  "name": "@rease/common",
   "version": "0.0.1",
-  "description": "In progress",
+  "description": "rease-common",
   "author": "cftcview <cftcview@gmail.com>",
-  "homepage": "https://github.com/wareset/rease/tree/main/packages/rease#readme",
+  "homepage": "https://github.com/wareset/rease/tree/main/packages/common#readme",
   "license": "MIT",
   "main": "dist/index",
   "module": "dist/index.mjs",
@@ -12,7 +12,7 @@
     "README.md"
   ],
   "keywords": [
-    "rease"
+    "rease-common"
   ],
   "scripts": {
     "babel:copy": "babel src --out-dir dist --copy-files --keep-file-extension --no-babelrc",
